<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.goji.exp</groupId>
    <artifactId>code-piece</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <dependencies>


        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.17.0</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.2</version>
            <scope>compile</scope>
        </dependency>



        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>


        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.14</version>
        </dependency>








        <!--    &lt;!&ndash; https://mvnrepository.com/artifact/com.squareup.moshi/moshi &ndash;&gt;-->
        <!--    <dependency>-->
        <!--      <groupId>com.squareup.moshi</groupId>-->
        <!--      <artifactId>moshi</artifactId>-->
        <!--      <version>1.15.1</version>-->
        <!--    </dependency>-->

        <!--    <dependency>-->
        <!--      <groupId>com.squareup.moshi</groupId>-->
        <!--      <artifactId>moshi-adapters</artifactId>-->
        <!--      <version>1.15.1</version>-->
        <!--    </dependency>-->



        <!--    <dependency>-->
        <!--      <groupId>junit</groupId>-->
        <!--      <artifactId>junit</artifactId>-->
        <!--      <version>3.8.1</version>-->
        <!--      <scope>compile</scope>-->
        <!--    </dependency>-->




    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
